{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 25,
  "lineage": "70255b03-2d65-d3e4-80b7-c3594cde3283",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0745397128f85f82a",
            "arn": "arn:aws:ec2:us-east-2:021891619621:elastic-ip/eipalloc-0745397128f85f82a",
            "domain": "vpc",
            "id": "eipalloc-0745397128f85f82a",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-18-223-198-44.us-east-2.compute.amazonaws.com",
            "public_ip": "18.223.198.44",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "legal-knowledge-platform-nat-eip-us-east-2a"
            },
            "tags_all": {
              "Environment": "sandbox",
              "ManagedBy": "terraform",
              "Name": "legal-knowledge-platform-nat-eip-us-east-2a",
              "Project": "legal-knowledge-platform"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0db6ec5191430acbc",
            "arn": "arn:aws:ec2:us-east-2:021891619621:elastic-ip/eipalloc-0db6ec5191430acbc",
            "domain": "vpc",
            "id": "eipalloc-0db6ec5191430acbc",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-130-171-32.us-east-2.compute.amazonaws.com",
            "public_ip": "3.130.171.32",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "legal-knowledge-platform-nat-eip-us-east-2b"
            },
            "tags_all": {
              "Environment": "sandbox",
              "ManagedBy": "terraform",
              "Name": "legal-knowledge-platform-nat-eip-us-east-2b",
              "Project": "legal-knowledge-platform"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:021891619621:internet-gateway/igw-0678a8c1739a6f98a",
            "id": "igw-0678a8c1739a6f98a",
            "owner_id": "021891619621",
            "tags": {
              "Name": "legal-knowledge-platform-igw"
            },
            "tags_all": {
              "Environment": "sandbox",
              "ManagedBy": "terraform",
              "Name": "legal-knowledge-platform-igw",
              "Project": "legal-knowledge-platform"
            },
            "vpc_id": "vpc-018c22ddb841a7aae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:021891619621:loadbalancer/app/legal-knowledge-platform-alb/e35f651d5bb57dcc",
            "arn_suffix": "app/legal-knowledge-platform-alb/e35f651d5bb57dcc",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "legal-knowledge-platform-alb-1652219148.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:021891619621:loadbalancer/app/legal-knowledge-platform-alb/e35f651d5bb57dcc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "legal-knowledge-platform-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0710472ef7bff28ee"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-049586a328e83a1a8"
              },
              {
                "subnet_id": "subnet-096be63696e38fc45"
              }
            ],
            "subnets": [
              "subnet-049586a328e83a1a8",
              "subnet-096be63696e38fc45"
            ],
            "tags": {
              "Name": "legal-knowledge-platform-alb"
            },
            "tags_all": {
              "Environment": "sandbox",
              "ManagedBy": "terraform",
              "Name": "legal-knowledge-platform-alb",
              "Project": "legal-knowledge-platform"
            },
            "vpc_id": "vpc-018c22ddb841a7aae",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0745397128f85f82a",
            "association_id": "eipassoc-0609d1ba4024dcfb1",
            "connectivity_type": "public",
            "id": "nat-078d3f5a46edd193a",
            "network_interface_id": "eni-00849b8e632ad625a",
            "private_ip": "10.1.1.150",
            "public_ip": "18.223.198.44",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-049586a328e83a1a8",
            "tags": {
              "Name": "legal-knowledge-platform-nat-us-east-2a"
            },
            "tags_all": {
              "Environment": "sandbox",
              "ManagedBy": "terraform",
              "Name": "legal-knowledge-platform-nat-us-east-2a",
              "Project": "legal-knowledge-platform"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_1",
            "aws_internet_gateway.main",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0db6ec5191430acbc",
            "association_id": "eipassoc-04f600b37938c32d2",
            "connectivity_type": "public",
            "id": "nat-0d84166e9e954ed9c",
            "network_interface_id": "eni-08f1d5aae2b9641e7",
            "private_ip": "10.1.2.206",
            "public_ip": "3.130.171.32",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-096be63696e38fc45",
            "tags": {
              "Name": "legal-knowledge-platform-nat-us-east-2b"
            },
            "tags_all": {
              "Environment": "sandbox",
              "ManagedBy": "terraform",
              "Name": "legal-knowledge-platform-nat-us-east-2b",
              "Project": "legal-knowledge-platform"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_2",
            "aws_internet_gateway.main",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:021891619621:route-table/rtb-04ee6c2906ede9b85",
            "id": "rtb-04ee6c2906ede9b85",
            "owner_id": "021891619621",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-078d3f5a46edd193a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "legal-knowledge-platform-private-rt-us-east-2a"
            },
            "tags_all": {
              "Environment": "sandbox",
              "ManagedBy": "terraform",
              "Name": "legal-knowledge-platform-private-rt-us-east-2a",
              "Project": "legal-knowledge-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-018c22ddb841a7aae"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_1",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat_1",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:021891619621:route-table/rtb-0bb95712a36d39a79",
            "id": "rtb-0bb95712a36d39a79",
            "owner_id": "021891619621",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d84166e9e954ed9c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "legal-knowledge-platform-private-rt-us-east-2b"
            },
            "tags_all": {
              "Environment": "sandbox",
              "ManagedBy": "terraform",
              "Name": "legal-knowledge-platform-private-rt-us-east-2b",
              "Project": "legal-knowledge-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-018c22ddb841a7aae"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_2",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat_2",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:021891619621:route-table/rtb-0543d941c8159ddfc",
            "id": "rtb-0543d941c8159ddfc",
            "owner_id": "021891619621",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0678a8c1739a6f98a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "legal-knowledge-platform-public-rt"
            },
            "tags_all": {
              "Environment": "sandbox",
              "ManagedBy": "terraform",
              "Name": "legal-knowledge-platform-public-rt",
              "Project": "legal-knowledge-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-018c22ddb841a7aae"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0293d424ba5e23fe5",
            "route_table_id": "rtb-04ee6c2906ede9b85",
            "subnet_id": "subnet-0579569ee89a351a1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_1",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat_1",
            "aws_route_table.private_1",
            "aws_subnet.private_1",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0728b1d817dcbffca",
            "route_table_id": "rtb-0bb95712a36d39a79",
            "subnet_id": "subnet-05b3448d675acfa99"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_2",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat_2",
            "aws_route_table.private_2",
            "aws_subnet.private_2",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b291ba733405931f",
            "route_table_id": "rtb-0543d941c8159ddfc",
            "subnet_id": "subnet-049586a328e83a1a8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d086422fe5716ff",
            "route_table_id": "rtb-0543d941c8159ddfc",
            "subnet_id": "subnet-096be63696e38fc45"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:021891619621:security-group/sg-0710472ef7bff28ee",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0710472ef7bff28ee",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "legal-knowledge-platform-alb-20250714232404643900000001",
            "name_prefix": "legal-knowledge-platform-alb-",
            "owner_id": "021891619621",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "legal-knowledge-platform-alb-sg"
            },
            "tags_all": {
              "Environment": "sandbox",
              "ManagedBy": "terraform",
              "Name": "legal-knowledge-platform-alb-sg",
              "Project": "legal-knowledge-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-018c22ddb841a7aae"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:021891619621:security-group/sg-097931091015871a4",
            "description": "Security group for EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-097931091015871a4",
            "ingress": [
              {
                "cidr_blocks": [
                  "107.197.112.114/32"
                ],
                "description": "SSH from your IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "SSH from Client VPN",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Qdrant from ALB",
                "from_port": 6333,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0710472ef7bff28ee"
                ],
                "self": false,
                "to_port": 6333
              },
              {
                "cidr_blocks": [],
                "description": "Superlinked API from ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0710472ef7bff28ee"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "legal-knowledge-platform-ec2-20250714232407355100000003",
            "name_prefix": "legal-knowledge-platform-ec2-",
            "owner_id": "021891619621",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "legal-knowledge-platform-ec2-sg"
            },
            "tags_all": {
              "Environment": "sandbox",
              "ManagedBy": "terraform",
              "Name": "legal-knowledge-platform-ec2-sg",
              "Project": "legal-knowledge-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-018c22ddb841a7aae"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:021891619621:subnet/subnet-0579569ee89a351a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0579569ee89a351a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021891619621",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "legal-knowledge-platform-private-us-east-2a",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "sandbox",
              "ManagedBy": "terraform",
              "Name": "legal-knowledge-platform-private-us-east-2a",
              "Project": "legal-knowledge-platform",
              "Type": "private"
            },
            "vpc_id": "vpc-018c22ddb841a7aae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:021891619621:subnet/subnet-05b3448d675acfa99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b3448d675acfa99",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021891619621",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "legal-knowledge-platform-private-us-east-2b",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "sandbox",
              "ManagedBy": "terraform",
              "Name": "legal-knowledge-platform-private-us-east-2b",
              "Project": "legal-knowledge-platform",
              "Type": "private"
            },
            "vpc_id": "vpc-018c22ddb841a7aae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:021891619621:subnet/subnet-049586a328e83a1a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049586a328e83a1a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "021891619621",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "legal-knowledge-platform-public-us-east-2a",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "sandbox",
              "ManagedBy": "terraform",
              "Name": "legal-knowledge-platform-public-us-east-2a",
              "Project": "legal-knowledge-platform",
              "Type": "public"
            },
            "vpc_id": "vpc-018c22ddb841a7aae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:021891619621:subnet/subnet-096be63696e38fc45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096be63696e38fc45",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "021891619621",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "legal-knowledge-platform-public-us-east-2b",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "sandbox",
              "ManagedBy": "terraform",
              "Name": "legal-knowledge-platform-public-us-east-2b",
              "Project": "legal-knowledge-platform",
              "Type": "public"
            },
            "vpc_id": "vpc-018c22ddb841a7aae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:021891619621:vpc/vpc-018c22ddb841a7aae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0baeee6845a2e03b1",
            "default_route_table_id": "rtb-04bf2e281ec29ef58",
            "default_security_group_id": "sg-0dbb1962ed116d837",
            "dhcp_options_id": "dopt-06fcc4435a5677d49",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-018c22ddb841a7aae",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04bf2e281ec29ef58",
            "owner_id": "021891619621",
            "tags": {
              "Name": "legal-knowledge-platform-vpc"
            },
            "tags_all": {
              "Environment": "sandbox",
              "ManagedBy": "terraform",
              "Name": "legal-knowledge-platform-vpc",
              "Project": "legal-knowledge-platform"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}